# grass-renderer

./: CMakeLists.txt  README.md
include/: Camera.h  CameraController.h  Engine.h  FrustumCull.h  IndexBuffer.h  Renderer.h  Shader.h  Transform.h  Vertex.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/: CameraController.cpp  Engine.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  app.cpp
src/res/: grass.shader  ground.shader
